--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@ body {
 }
 
 input {
-    font-size: 35px;
+    font-size: 100%;
     border-radius: 8px;
     box-shadow: 4px 4px rgb(149, 235, 254);
 
 }
 
 .resultado {
-    margin-top: 25px;
+    margin: 25px;
 }
 
