--- a/style.css
+++ b/style.css
@@ -1,64 +1,65 @@
-@import url('https://fonts.cdnfonts.com/css/press-start-2p');
+@import url('https://fonts.cdnfonts.com/css/macromedia');
+
+/*Configuração Geral*/
 
 body {
-    background-color: rgb(55, 69, 69);;
-    color: white;
-    margin: 35px;
-    font: normal 25px Arial;
-    border-radius: 10px;
-    min-width: 250;
-    max-width: 1000;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 2px 4px, rgb(48, 48, 48) 0px 0px 0px 8px;
+    margin: 0px;
+    background-color: rgb(65, 65, 65);
+    font: Normal 14pt Arial;
+
 }
 
-main {
-    background: rgb(97, 136, 136);
-    border-radius: 10px;
-    align-items: center;
-    padding: 20px;
-    font-size: 32px;
+/*Cabeçalho*/
+
+.header {
+    background-image: linear-gradient(to right,rgb(129, 195, 49), rgb(234, 205, 54));
+    font-family: 'Macromedia', sans-serif;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
-.cabeçalho {
-    font-size: 19px;
-    font-family: 'Press Start 2P', sans-serif;
-    color: rgb(23, 47, 52);
-    background-color: rgb(149, 235, 254);
-    border-radius: 10px;
-    padding: 1px;
-    padding-right: 25px;
-    padding-left: 20px;
-    margin-bottom: 15px;    
+/*Conteúdo*/
+
+.content {
+    background-color: white;
+    border: 5px solid gray;
+    border-radius: 5px;
+    padding: 35px;
+    font-size: 110%;
+    max-width: 800px;
+    min-width: 300px;
+    margin: auto;
+    margin-top: 25px;
+    
 }
 
 input {
-    font-size: 100%;
-    border-radius: 8px;
-    box-shadow: 4px 4px rgb(149, 235, 254);
-    border: 2.5px solid rgb(95, 170, 187);
-    max-width: 240px; 
+    border-radius: 5px;
+    font-size: 16px;
+    border: 3px solid rgb(94, 141, 36);
 }
 
 .resultado {
-    background-color: rgb(255, 255, 255);
-    color: rgb(39, 39, 39);
-    margin-top: 45px;
-    padding-left: 20px;
-    border-radius: 8px;
-    box-shadow: 4px 4px  rgb(149, 235, 254);
-    border: 2.5px solid rgb(95, 170, 187);
-    max-width: 100%;
+    margin-top: 25px;
+    padding: 5px;
+    border-radius: 5px;
+    background-image: linear-gradient(to right, rgb(129, 195, 49, 0.550), rgb(234, 205, 54, 0.550));
+    border: 5px solid rgb(94, 141, 36);
+
 }
+
+/*Rodapé*/
 
 footer {
     text-align: center;
-    font-size: 85%;
-    padding-bottom: 1px;
+    color: white;
 }
 
-a {
+.linkGithub {
     text-decoration: none;
-    color: rgb(149, 235, 254);
-    border: 4px solid rgba(149, 235, 254, 0.293);
-    border-radius: 4px;
+    color: rgb(190, 255, 111);
+    border-radius: 5px;
+    background-image: linear-gradient(to right, rgba(155, 232, 61, 0.50), rgba(255, 222, 59, 0.50));
+    border: 3px solid rgb(137, 205, 53);
 }
